wso2/manifests/wso2am-postgres.yml
#database deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2am-postgres
  namespace: wso2
  labels:
    app: wso2am
    type: database
spec:
  selector:
    matchLabels:
      app: wso2am
      type: database
  template:
    metadata:
      name: wso2am-postgres
      namespace: wso2
      labels:
        app: wso2am
        type: database
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wso2am-data
      containers:
        - name: wso2am-postgres
          image: registry.intsmm.net/wso2/wso2am-postgres:17-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
